2005-10-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): use length-fraction.

	* lily/stem.cc (calc_length): multiply with length_fraction. Makes
	for easier grace tweaks.

	* lily/beam.cc: remove dir-function.

	* lily/system.cc (pre_processing): use callback to trigger spacing procedures.

	* lily/grob.cc: remove spacing-procedure.

	* lily/note-head.cc (calc_stem_attachment): new function.
	(internal_print): use callback to get glyph-name.

	* lily/grob-property.cc (get_interfaces): new function.

	* lily/grob-scheme.cc (LY_DEFINE): new function ly:grob-interfaces

	* lily/stem.cc (calc_stem_end_position): new function.
	(calc_length): new function.
	document details for stem.
	remove Stem::get_direction()

	* lily/grob-scheme.cc (LY_DEFINE): new function ly:grob-set-callback! 

	* lily/grob-property.cc (set_callback): new function.

	* lily/script-engraver.cc (make_script_from_event): don't trigger callback.

	* lily/item-scheme.cc: new file.

	* lily/bar-line.cc (before_line_breaking): remove function.
	remove bar-size-procedure, break-glyph-function

	* lily/clef-engraver.cc (set_glyph): use glyph iso. glyph-name

	* lily/clef.cc (before_line_breaking): change to calc_glyph_name.

	* lily/system-start-delimiter.cc (print): suicide from
	here. Remove after_line_breaking_callback.

	* lily/script-interface.cc (calc_direction): use callback for direction.

	* lily/side-position-interface.cc (aligned_side): don't use
	Side_position_interface::get_direction directly. Use callback. 

	* lily/grob.cc (get_stencil): simplify: use callback mechanism to
	calculate stencil.
	(get_print_stencil): rename from get_stencil: create stencil with
	transparency, color and cause. 

	* scm/define-grobs.scm: change print-function to stencil callback everywhere.

	* python/convertrules.py (conv): insert temporary warning rule.

	* lily/multi-measure-rest.cc (set_text_rods): use stencil directly.
